--- a/index.html
+++ b/index.html
@@ -2,7 +2,14 @@
 <html>
 <head>
   <meta charset="utf-8">
-  <style>html,body,canvas{height:100%;width:100%;margin:0px;overflow:hidden;}</style>
+  <style>
+    html, body, canvas {
+      height: 100%;
+      width: 100%;
+      margin: 0px;
+      overflow: hidden;
+    }
+  </style>
 </head>
 <body>
   <canvas id="canvas" height="1080" width="1920"></canvas>
